# researcher

./: .gitignore  .replit  CALCGRAPH_IMPLEMENTATION.md  MANUS_TASK_AUDIT.md  SECURITY_NOTES.md  batch-generate-parallel.js  batch-generate-reports.js  batch-results-2026-01-14.json  clear-data.cjs  debug-db.cjs  extract-reports.cjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  replit.md  tailwind.config.ts  vitest.config.ts
.agents/: agent_assets_metadata.toml
attached_assets/: App Model_1764357751103.xlsx  BlueAlly_AI_Assessment_Alarm.com_1772030856169.json  BlueAlly_AI_Assessment_Ardent_Health_(3)_1771961437015.json  BlueAlly_AI_Assessment_Ardent_Health_Services_1771523687595.json  BlueAlly_AI_Assessment_Constellation_Energy_(12)_1778264981573.json  BlueAlly_AI_Assessment_Constellation_Energy_(4)_1778075786292.json  BlueAlly_AI_Assessment_Lear_Corporation_(1)_1778012422728.json  BlueAlly_AI_Assessment_NCR_Atleos_(1)_1771520230303.json  BlueAlly_AI_Assessment_Tractor_Supply_Company_(1)_1778030918117.json  BlueAlly_BrandGuidelines_1764369644746.docx  Comprehensive_Prompt__Transform_AI_Assessment_Reports_into_Stun_1765481178874.md  Industry Dashboard_1764447292519.md  Pasted--AEA-Portfolio-Batch-Report-Generator-Generates-AI-asse_1768401857696.txt  Pasted--AEA-Portfolio-Batch-Report-Generator-PARALLEL-VERSION-_1768402089088.txt  Pasted--EPOCH-FRAMEWORK-HARDCODED-DEFINITIONS-DO-NOT-MODIFY-OR_1773158907361.txt  Pasted--REPLIT-AGENT-PROMPT-Debug-Fix-Harden-the-BlueAlly-AI-A_1771893441959.txt  (+57 more)
client/: index.html
crewai_service/: __init__.py  (+3 more)
(+206 files in other folders)
