[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "crewai[tools]>=1.9.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "mcp>=1.23.0",
    "pdfminer-six>=20251230",
    "protobuf>=5.29.5,<6.0",
    "pyasn1>=0.6.2",
    "python-multipart>=0.0.22",
    "urllib3>=2.6.3",
]
